common/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/instance: ntfy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
      app.kubernetes.io/instance: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ntfy
        app.kubernetes.io/instance: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.23.0
          imagePullPolicy: IfNotPresent
          args:
            - serve
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /v1/health
              port: http
          livenessProbe:
            httpGet:
              path: /v1/health
              port: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /etc/ntfy/server.yml
              subPath: server.yml
              readOnly: true
            - name: data
              mountPath: /var/cache/ntfy
      volumes:
        - name: config
          configMap:
            name: ntfy-config
        - name: data
          persistentVolumeClaim:
            claimName: ntfy-data
